<package>
		<name>iiwa</name>
    <description>
		IIWA Robot
	</description>
    <version>2.0.2</version>
    <maintainer email="khansari@cs.stanford.edu">Mohammad Khansari</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <license>BSD</license>
    <url> http://lasa.epfl.ch/khansari </url>
    
    <build_depend> roscpp </build_depend>
    <build_depend> message_generation </build_depend>
		<build_depend> sensor_msgs </build_depend>
    <run_depend>   message_runtime </run_depend>
		<run_depend> sensor_msgs </run_depend>
</package>
