<package>
		<name>iiwa</name>
    <description> A ROS interface for controlling the kuka iiwa. </description>
    <version>2.0.6</version>
    <maintainer email="khansari@cs.stanford.edu">Mohammad Khansari</maintainer>
    <maintainer email="keegango@stanford.edu">Keegan Go</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <license>BSD</license>
    <url>https://bitbucket.org/khansari/iiwa</url>
    
    <build_depend> roscpp </build_depend>
    <build_depend> message_generation </build_depend>
		<build_depend> sensor_msgs </build_depend>
    <run_depend>   message_runtime </run_depend>
		<run_depend> sensor_msgs </run_depend>
</package>
